[gd_scene load_steps=3 format=3 uid="uid://ctowercard"]

[ext_resource type="Script" path="res://scripts/ui/tower_card.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.15, 0.15, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.5, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0

[node name="TowerCard" type="PanelContainer"]
custom_minimum_size = Vector2(180, 80)
theme_override_styles/panel = SubResource("StyleBoxFlat_card")
script = ExtResource("1_script")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="HBox"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="VBox" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="NameLabel" type="Label" parent="HBox/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Pokemon"

[node name="TypeLabel" type="Label" parent="HBox/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Type"

[node name="DeployBtn" type="Button" parent="HBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 4
text = "+"
theme_override_font_sizes/font_size = 20

[connection signal="pressed" from="HBox/DeployBtn" to="." method="_on_deploy_btn_pressed"]
